syntax = "proto3";

option go_package = "kalisto/tests/service";

package kalisto.tests.examples.service;

service BookStore {
    rpc GetBook(GetBookRequest) returns (GetBookResponse) {}
    rpc Yo(GetBookRequest) returns (GetBookResponse) {}
}

message Book {
    string id = 1;
}

// message RepeatedNestedBook {
//     repeated RepeatedNestedBook books = 1;
//     repeated Book simpleBooks = 2;
// }

// message DeepNestedBook {
//     BookHasDeepNested hasNested = 1; 
// }

// message BookHasDeepNested {
//     DeepNestedBook deepNested = 1;
// }

message GetBookRequest {
    // string id = 1;
    // double double = 2;
    // float float = 3;
    // int32 int32 = 4;
    // int64 int64 = 5;
    // uint32 uint32 = 6;
    // uint64 uint64 = 7;
    // sint32 sint32 = 8;
    // sint64 sint64 = 9;
    // fixed32 fixed32 = 10;
    // fixed64 fixed64 = 11;
    // sfixed32 sfixed32 = 12;
    // sfixed64 sfixed64 = 13;
    // bool bool = 14;
    // bytes bytes = 15;
    // enum Enum {
    //     VALUE_1 = 0;
    //     VALUE_2 = 3;
    //     VALUE_3 = 4;
    // }
    // Enum enum = 16;
    // Book Book = 17;
    // map<string, string> floatToString = 23;
    map<int32, Book> intToBooks = 24;
    // map enum enum 25
    // repeated string 26
    // repeated enum 27
    // repeated int 28
    // repeated object 29
    // repeated map enum object
    // DeepNestedBook deepNestedBook = 23;
    // RepeatedNestedBook repeatedNestedBook = 18;
        // oneof someBook {
    //     string oneId = 19;
    //     Enum oneEnum = 20;
    //     Book oneBook = 21;
    //     RepeatedNestedBook OneRepeatedNestedBook = 22;
    // }
}

message GetBookResponse {
    string name = 1;
}
